Added dates to beer logging